# OB-Xd-GPL

./: CMakeLists.txt  OB-Xd-GPL.jucer  OB-Xd.jucer  README.md  Skin.xml
APPS/OB-Xd-GPL.app/Contents/: Info.plist
APPS/OB-Xd-GPL.app/Contents/Resources/: Icon.icns
APPS/OB-Xd-GPL.component/Contents/: Info.plist
APPS/OB-Xd-GPL.component/Contents/_CodeSignature/: CodeResources
APPS/OB-Xd.app/Contents/: Info.plist
APPS/OB-Xd.component/Contents/: Info.plist
Banks/: 000 - Moby Pixel Bank.fxb  MobyPixelBank.fxb
Builds/MacOSX/: Info-AU.plist  Info-Standalone_Plugin.plist  Info-VST.plist  Info-VST3.plist  Info-VST3_Manifest_Helper.plist
Builds/MacOSX/OB-Xd-GPL.xcodeproj/: project.pbxproj
Builds/MacOSX/OB-Xd-GPL.xcodeproj/project.xcworkspace/xcuserdata/nickculbertson.xcuserdatad/: UserInterfaceState.xcuserstate
Builds/MacOSX/OB-Xd-GPL.xcodeproj/xcuserdata/nickculbertson.xcuserdatad/xcschemes/: xcschememanagement.plist
Builds/MacOSX/OB-Xd.xcodeproj/: project.pbxproj
Builds/MacOSX/OB-Xd.xcodeproj/project.xcworkspace/xcuserdata/nickculbertson.xcuserdatad/: UserInterfaceState.xcuserstate
Builds/MacOSX/OB-Xd.xcodeproj/xcuserdata/nickculbertson.xcuserdatad/xcschemes/: xcschememanagement.plist
Builds/VisualStudio2019/: OB-Xd-GPL.sln  OB-Xd-GPL_SharedCode.vcxproj  OB-Xd-GPL_SharedCode.vcxproj.filters  OB-Xd-GPL_StandalonePlugin.vcxproj  OB-Xd-GPL_StandalonePlugin.vcxproj.filters  OB-Xd-GPL_VST.vcxproj  OB-Xd-GPL_VST3.vcxproj  OB-Xd.sln  OB-Xd_SharedCode.vcxproj  OB-Xd_SharedCode.vcxproj.filters  OB-Xd_StandalonePlugin.vcxproj  OB-Xd_VST.vcxproj  OB-Xd_VST.vcxproj.filters  OB-Xd_VST3.vcxproj  OB-Xd_VST3.vcxproj.filters  OB-Xd_VST3ManifestHelper.vcxproj  OB-Xd_VST3ManifestHelper.vcxproj.filters  resources.rc
JuceLibraryCode/: AppConfig.h  BinaryData.cpp  BinaryData.h  JuceHeader.h  JucePluginDefines.h
Source/: PluginEditor.cpp  PluginProcessor.cpp
